added web interface

--- a/data/index.html
+++ b/data/index.html
@@ -14,5 +14,14 @@
             Autonomous Garden Node System
         </p>
     </div>
+
+    <div id="root"></div>
+
+    <script src="./modules/index.js" type="module"></script>
+    <script src="./modules/service.js" type="module"></script>
+    <script src="./modules/format.js" type="module"></script>
+    <script src="./modules/schedule.js" type="module"></script>
+    <script src="./modules/handlers.js" type="module"></script>
+    <script src="./modules/frequencies.js" type="module"></script>
 </body>
 </html>
